--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Mirrored from ledthanhdat.vn/html/cleric/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 26 Sep 2023 07:17:23 GMT -->
   <head>
     <title>Cleric - About</title>
     <meta charset="UTF-8" />
@@ -80,7 +79,7 @@
               class="col-lg-3 col-sm-4 col-md-3 col-xs-7 col-ts-12 header-element"
             >
               <div class="logo">
-                <a href="index-2.html">
+                <a href="index.html">
                   <img src="assets/images/dekor-dizayn-logo.PNG" alt="img" />
                 </a>
               </div>
@@ -89,7 +88,7 @@
               <div class="block-search-block">
                 <form class="form-search form-search-width-category">
                   <div class="form-content">
-                    <div class="category">
+                    <div class="category" id="category-select">
                       <select
                         title="cate"
                         data-placeholder="All Categories"
@@ -366,7 +365,7 @@
                 >
                   <li class="menu-item">
                     <a
-                      href="index-2.html"
+                      href="index.html"
                       class="cleric-menu-item-title"
                       title="Home"
                       >Ana səhifə</a
@@ -374,126 +373,21 @@
                   </li>
                   <li class="menu-item">
                     <a
-                      href="gridproducts_leftsidebar.html"
+                      href="products.html"
                       class="cleric-menu-item-title"
                       title="Shop"
                     >
                       Məhsullar</a
                     >
                   </li>
-                  <li class="menu-item menu-item-has-children item-megamenu">
-                    <a href="#" class="cleric-menu-item-title" title="Pages"
-                      >Pages</a
-                    >
-                    <span class="toggle-submenu"></span>
-                    <div class="submenu mega-menu menu-page">
-                      <div class="row">
-                        <div
-                          class="col-xs-12 col-sm-12 col-md-12 col-lg-3 menu-page-item"
-                        >
-                          <div class="cleric-custommenu default">
-                            <h2 class="widgettitle">Shop Pages</h2>
-                            <ul class="menu">
-                              <li class="menu-item">
-                                <a href="shoppingcart.html">Shopping Cart</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="checkout.html">Checkout</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="contact.html">Contact us</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="404page.html">404</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="login.html">Login/Register</a>
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div
-                          class="col-xs-12 col-sm-12 col-md-12 col-lg-3 menu-page-item"
-                        >
-                          <div class="cleric-custommenu default">
-                            <h2 class="widgettitle">Product</h2>
-                            <ul class="menu">
-                              <li class="menu-item">
-                                <a href="productdetails-fullwidth.html"
-                                  >Product Fullwidth</a
-                                >
-                              </li>
-                              <li class="menu-item">
-                                <a href="productdetails-leftsidebar.html"
-                                  >Product left sidebar</a
-                                >
-                              </li>
-                              <li class="menu-item">
-                                <a href="productdetails-rightsidebar.html"
-                                  >Product right sidebar</a
-                                >
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div
-                          class="col-xs-12 col-sm-12 col-md-12 col-lg-3 menu-page-item"
-                        ></div>
-                        <div
-                          class="col-xs-12 col-sm-12 col-md-12 col-lg-3 menu-page-item"
-                        ></div>
-                      </div>
-                    </div>
-                  </li>
-                  <li class="menu-item menu-item-has-children">
+
+                  <li class="menu-item">
                     <a
-                      href="inblog_right-siderbar.html"
+                      href="blog.html"
                       class="cleric-menu-item-title"
                       title="Blogs"
-                      >Bloqlar</a
+                      >Xəbərlər</a
                     >
-                    <span class="toggle-submenu"></span>
-                    <ul class="submenu">
-                      <li class="menu-item menu-item-has-children">
-                        <a
-                          href="#"
-                          class="cleric-menu-item-title"
-                          title="Blog Style"
-                          >Blog Style</a
-                        >
-                        <span class="toggle-submenu"></span>
-                        <ul class="submenu">
-                          <li class="menu-item">
-                            <a href="bloggrid.html">Grid</a>
-                          </li>
-                          <li class="menu-item">
-                            <a href="bloglist.html">List</a>
-                          </li>
-                          <li class="menu-item">
-                            <a href="bloglist-leftsidebar.html">List Sidebar</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="menu-item menu-item-has-children">
-                        <a
-                          href="#"
-                          class="cleric-menu-item-title"
-                          title="Post Layout"
-                          >Post Layout</a
-                        >
-                        <span class="toggle-submenu"></span>
-                        <ul class="submenu">
-                          <li class="menu-item">
-                            <a href="inblog_left-siderbar.html">Left Sidebar</a>
-                          </li>
-                          <li class="menu-item">
-                            <a href="inblog_right-siderbar.html"
-                              >Right Sidebar</a
-                            >
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
                   </li>
                   <li class="menu-item">
                     <a
@@ -607,7 +501,7 @@
             <div class="breadcrumb-trail breadcrumbs">
               <ul class="trail-items breadcrumb">
                 <li class="trail-item trail-begin">
-                  <a href="index-2.html">Ana səhifə</a>
+                  <a href="index.html">Ana səhifə</a>
                 </li>
                 <li class="trail-item trail-end active">Haqqımızda</li>
               </ul>
@@ -622,14 +516,15 @@
               <h3 class="custom_blog_title">About Us</h3>
               <div class="page-main-content">
                 <div class="header-banner banner-image">
-                  <div
-                    class="banner-wrap"
-                    style="
-                      background-image: url('./assets/images/about-background.jpg');
-                    "
-                  >
+                  <div class="banner-wrap">
                     <div class="banner-header">
-                      <div class="col-lg-5 col-md-offset-7">
+                      <div class="col-lg-6">
+                        <img
+                          src="./assets/images/about_img.jpg"
+                          alt="product"
+                        />
+                      </div>
+                      <div class="col-lg-6">
                         <div class="content-inner">
                           <h2 class="title">
                             New Collection <br />
@@ -637,9 +532,16 @@
                           </h2>
                           <div class="sub-title">
                             Shop the latest products right <br />
-                            We have beard supplies from top brands.
+                            We have beard supplies from top brands. Lorem ipsum
+                            dolor sit amet, consectetur adipisicing elit.
+                            Tenetur eaque, nisi eveniet earum debitis ratione
+                            magnam, dolorem soluta veritatis harum, veniam
+                            recusandae ea provident voluptates accusamus
+                            assumenda? Incidunt, necessitatibus porro.
                           </div>
-                          <a href="#" class="cleric-button button">Shop now</a>
+                          <a href="products.html" class="cleric-button button"
+                            >Shop now</a
+                          >
                         </div>
                       </div>
                     </div>
@@ -697,61 +599,95 @@
                     </div>
                   </div>
                 </div>
-                <div class="team-member">
-                  <div class="row">
-                    <div class="col-sm-12 border-custom">
-                      <span></span>
+                <div class="faq_section">
+                  <div class="container myContainer">
+                    <div class="section__title">
+                      <h2>Tez-tez soruşulan suallar</h2>
                     </div>
-                  </div>
-                  <h2 class="custom_blog_title center">
-                    cleric’s Important Persons
-                  </h2>
-                  <div
-                    class="team-member-slider nav-center owl-slick"
-                    data-slick='{"autoplay":false, "autoplaySpeed":1000, "arrows":true, "dots":false, "infinite":true, "speed":800, "rows":1}'
-                    data-responsive='[{"breakpoint":"0","settings":{"slidesToShow":1}},{"breakpoint":"480","settings":{"slidesToShow":1}},{"breakpoint":"767","settings":{"slidesToShow":2}},{"breakpoint":"991","settings":{"slidesToShow":3}},{"breakpoint":"1199","settings":{"slidesToShow":3}},{"breakpoint":"2000","settings":{"slidesToShow":3}}]'
-                  >
-                    <div class="cleric-team-member">
-                      <div class="team-member-item">
-                        <div class="member_avatar">
-                          <img src="assets/images/member3.png" alt="img" />
-                        </div>
-                        <h5 class="member_name">Mr Claudio</h5>
-                        <div class="member_position">
-                          CEO & Founder cleric Outfit
+                    <div class="accordion">
+                      <div class="accordion-item">
+                        <button id="accordion-button-1" aria-expanded="false">
+                          <span class="accordion-title"
+                            >Lorem, ipsum dolor sit amet consectetur adipisicing
+                            elit. Eaque quae molestiae officiis voluptatibus ut,
+                            labore in maxime quam?</span
+                          ><span class="icon" aria-hidden="true"></span>
+                        </button>
+                        <div class="accordion-content">
+                          <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua. Elementum sagittis vitae et leo
+                            duis ut. Ut tortor pretium viverra suspendisse
+                            potenti.
+                          </p>
                         </div>
                       </div>
-                    </div>
-                    <div class="cleric-team-member">
-                      <div class="team-member-item">
-                        <div class="member_avatar">
-                          <img src="assets/images/member2.png" alt="img" />
-                        </div>
-                        <h5 class="member_name">Mr Claudio</h5>
-                        <div class="member_position">
-                          CEO & Founder cleric Outfit
-                        </div>
-                      </div>
-                    </div>
-                    <div class="cleric-team-member">
-                      <div class="team-member-item">
-                        <div class="member_avatar">
-                          <img src="assets/images/member1.png" alt="img" />
-                        </div>
-                        <h5 class="member_name">Mr Claudio</h5>
-                        <div class="member_position">
-                          CEO & Founder cleric Outfit
+                      <div class="accordion-item">
+                        <button id="accordion-button-2" aria-expanded="false">
+                          <span class="accordion-title"
+                            >Why elementum sagittis vitae et leo duis ut. Ut
+                            tortor pretium viverra suspendisse potenti?</span
+                          ><span class="icon" aria-hidden="true"></span>
+                        </button>
+                        <div class="accordion-content">
+                          <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua. Elementum sagittis vitae et leo
+                            duis ut. Ut tortor pretium viverra suspendisse
+                            potenti.
+                          </p>
                         </div>
                       </div>
-                    </div>
-                    <div class="cleric-team-member">
-                      <div class="team-member-item">
-                        <div class="member_avatar">
-                          <img src="assets/images/member3.png" alt="img" />
+                      <div class="accordion-item">
+                        <button id="accordion-button-3" aria-expanded="false">
+                          <span class="accordion-title"
+                            >Will we ever discover aliens?</span
+                          ><span class="icon" aria-hidden="true"></span>
+                        </button>
+                        <div class="accordion-content">
+                          <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua. Elementum sagittis vitae et leo
+                            duis ut. Ut tortor pretium viverra suspendisse
+                            potenti.
+                          </p>
                         </div>
-                        <h5 class="member_name">Mr Claudio</h5>
-                        <div class="member_position">
-                          CEO & Founder cleric Outfit
+                      </div>
+                      <div class="accordion-item">
+                        <button id="accordion-button-4" aria-expanded="false">
+                          <span class="accordion-title"
+                            >How much does Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit?</span
+                          ><span class="icon" aria-hidden="true"></span>
+                        </button>
+                        <div class="accordion-content">
+                          <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua. Elementum sagittis vitae et leo
+                            duis ut. Ut tortor pretium viverra suspendisse
+                            potenti.
+                          </p>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <button id="accordion-button-5" aria-expanded="false">
+                          <span class="accordion-title"
+                            >How do Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit?</span
+                          ><span class="icon" aria-hidden="true"></span>
+                        </button>
+                        <div class="accordion-content">
+                          <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua. Elementum sagittis vitae et leo
+                            duis ut. Ut tortor pretium viverra suspendisse
+                            potenti.
+                          </p>
                         </div>
                       </div>
                     </div>
@@ -770,7 +706,7 @@
             <div class="box-footer col-xs-12 col-sm-4 col-md-4 col-lg-4">
               <div class="cleric-custommenu default">
                 <div class="logo">
-                  <a href="index-2.html">
+                  <a href="index.html">
                     <img
                       src="./assets/images/dekor-dizayn-logo.PNG"
                       alt="logo"
@@ -795,19 +731,16 @@
                 </div>
                 <ul class="menu">
                   <li class="menu-item">
-                    <a href="#">FAQs</a>
+                    <a href="products.html">Məhsullar</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#">Track Order</a>
+                    <a href="blog.html">Xəbərlər</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#">Delivery</a>
+                    <a href="about.html">Haqqımızda</a>
                   </li>
                   <li class="menu-item">
-                    <a href="contact.html">Contact Us</a>
-                  </li>
-                  <li class="menu-item">
-                    <a href="#">Return</a>
+                    <a href="contact.html">Əlaqə</a>
                   </li>
                 </ul>
               </div>
@@ -869,6 +802,7 @@
         </div>
       </div>
     </footer>
+
     <a href="#" class="backtotop">
       <i class="fa fa-angle-double-up"></i>
     </a>
@@ -892,7 +826,6 @@
     <script src="assets/js/jquery.scrollbar.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3nDHy1dARR-Pa_2jjPCjvsOR4bcILYsM"></script>
     <script src="assets/js/frontend-plugin.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
-
-  <!-- Mirrored from ledthanhdat.vn/html/cleric/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 26 Sep 2023 07:17:24 GMT -->
 </html>
