--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -44,7 +44,7 @@
       <div class="top-bar">
         <div class="container">
           <div class="top-bar-left">
-            <div class="header-message">Welcome to our online store!</div>
+            <div class="header-message">Online mağazamıza xoş gəlmisiniz!</div>
           </div>
           <div class="top-bar-right">
             <div class="header-language">
@@ -80,13 +80,13 @@
       </div>
       <div class="container">
         <div class="main-header">
-          <div class="row">
+          <div class="row myRow">
             <div
               class="col-lg-3 col-sm-4 col-md-3 col-xs-7 col-ts-12 header-element"
             >
               <div class="logo">
-                <a href="index-2.html">
-                  <img src="assets/images/logo.png" alt="img" />
+                <a href="index.html">
+                  <img src="assets/images/dekor-dizayn-logo.PNG" alt="img" />
                 </a>
               </div>
             </div>
@@ -94,7 +94,7 @@
               <div class="block-search-block">
                 <form class="form-search form-search-width-category">
                   <div class="form-content">
-                    <div class="category">
+                    <div class="category" id="category-select">
                       <select
                         title="cate"
                         data-placeholder="All Categories"
@@ -274,7 +274,7 @@
                   <span></span>
                   <span></span>
                 </span>
-                <span class="text">All Categories</span>
+                <span class="text">BÜTÜN KATEQORİYALAR</span>
               </div>
               <div class="block-content verticalmenu-content">
                 <ul
@@ -371,7 +371,7 @@
                 >
                   <li class="menu-item">
                     <a
-                      href="index-2.html"
+                      href="index.html"
                       class="cleric-menu-item-title"
                       title="Home"
                       >Ana səhifə</a
@@ -379,125 +379,21 @@
                   </li>
                   <li class="menu-item">
                     <a
-                      href="gridproducts_leftsidebar.html"
+                      href="products.html"
                       class="cleric-menu-item-title"
                       title="Shop"
-                      >Mağaza</a
+                    >
+                      Məhsullar</a
                     >
                   </li>
-                  <li class="menu-item menu-item-has-children item-megamenu">
-                    <a href="#" class="cleric-menu-item-title" title="Pages"
-                      >Pages</a
-                    >
-                    <span class="toggle-submenu"></span>
-                    <div class="submenu mega-menu menu-page">
-                      <div class="row">
-                        <div
-                          class="col-xs-12 col-sm-12 col-md-12 col-lg-3 menu-page-item"
-                        >
-                          <div class="cleric-custommenu default">
-                            <h2 class="widgettitle">Shop Pages</h2>
-                            <ul class="menu">
-                              <li class="menu-item">
-                                <a href="shoppingcart.html">Shopping Cart</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="checkout.html">Checkout</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="contact.html">Contact us</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="404page.html">404</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="login.html">Login/Register</a>
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div
-                          class="col-xs-12 col-sm-12 col-md-12 col-lg-3 menu-page-item"
-                        >
-                          <div class="cleric-custommenu default">
-                            <h2 class="widgettitle">Product</h2>
-                            <ul class="menu">
-                              <li class="menu-item">
-                                <a href="productdetails-fullwidth.html"
-                                  >Product Fullwidth</a
-                                >
-                              </li>
-                              <li class="menu-item">
-                                <a href="productdetails-leftsidebar.html"
-                                  >Product left sidebar</a
-                                >
-                              </li>
-                              <li class="menu-item">
-                                <a href="productdetails-rightsidebar.html"
-                                  >Product right sidebar</a
-                                >
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div
-                          class="col-xs-12 col-sm-12 col-md-12 col-lg-3 menu-page-item"
-                        ></div>
-                        <div
-                          class="col-xs-12 col-sm-12 col-md-12 col-lg-3 menu-page-item"
-                        ></div>
-                      </div>
-                    </div>
-                  </li>
-                  <li class="menu-item menu-item-has-children">
+
+                  <li class="menu-item">
                     <a
-                      href="inblog_right-siderbar.html"
+                      href="blog.html"
                       class="cleric-menu-item-title"
                       title="Blogs"
-                      >Bloqlar</a
+                      >Xəbərlər</a
                     >
-                    <span class="toggle-submenu"></span>
-                    <ul class="submenu">
-                      <li class="menu-item menu-item-has-children">
-                        <a
-                          href="#"
-                          class="cleric-menu-item-title"
-                          title="Blog Style"
-                          >Blog Style</a
-                        >
-                        <span class="toggle-submenu"></span>
-                        <ul class="submenu">
-                          <li class="menu-item">
-                            <a href="bloggrid.html">Grid</a>
-                          </li>
-                          <li class="menu-item">
-                            <a href="bloglist.html">List</a>
-                          </li>
-                          <li class="menu-item">
-                            <a href="bloglist-leftsidebar.html">List Sidebar</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="menu-item menu-item-has-children">
-                        <a
-                          href="#"
-                          class="cleric-menu-item-title"
-                          title="Post Layout"
-                          >Post Layout</a
-                        >
-                        <span class="toggle-submenu"></span>
-                        <ul class="submenu">
-                          <li class="menu-item">
-                            <a href="inblog_left-siderbar.html">Left Sidebar</a>
-                          </li>
-                          <li class="menu-item">
-                            <a href="inblog_right-siderbar.html"
-                              >Right Sidebar</a
-                            >
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
                   </li>
                   <li class="menu-item">
                     <a
@@ -610,18 +506,18 @@
           <div class="breadcrumb-trail breadcrumbs">
             <ul class="trail-items breadcrumb">
               <li class="trail-item trail-begin">
-                <a href="index-2.html">
-                  <span> Home </span>
+                <a href="index.html">
+                  <span> Ana səhifə </span>
                 </a>
               </li>
               <li class="trail-item trail-end active">
-                <span> Shopping Cart </span>
+                <span> Səbət</span>
               </li>
             </ul>
           </div>
           <div class="row">
             <div class="main-content-cart main-content col-sm-12">
-              <h3 class="custom_blog_title">Shopping Cart</h3>
+              <h3 class="custom_blog_title">Səbəti</h3>
               <div class="page-main-content">
                 <div class="shoppingcart-content">
                   <form
@@ -645,7 +541,7 @@
                             <a href="#" class="remove"></a>
                           </td>
                           <td class="product-thumbnail">
-                            <a href="#">
+                            <a href="productdetails.html">
                               <img
                                 src="assets/images/cart-item-2.jpg"
                                 alt="img"
@@ -654,7 +550,9 @@
                             </a>
                           </td>
                           <td class="product-name" data-title="Product">
-                            <a href="#" class="title">Mini swing dress</a>
+                            <a href="productdetails.html" class="title"
+                              >Mini swing dress</a
+                            >
                             <span class="attributes-select attributes-color"
                               >Black,</span
                             >
@@ -701,7 +599,7 @@
                             <a href="#" class="remove"></a>
                           </td>
                           <td class="product-thumbnail">
-                            <a href="#">
+                            <a href="productdetails.html">
                               <img
                                 src="assets/images/cart-item-3.jpg"
                                 alt="img"
@@ -710,7 +608,9 @@
                             </a>
                           </td>
                           <td class="product-name" data-title="Product">
-                            <a href="#" class="title">Square neck top</a>
+                            <a href="productdetails.html" class="title"
+                              >Square neck top</a
+                            >
                             <span class="attributes-select attributes-color"
                               >White,</span
                             >
@@ -757,7 +657,7 @@
                             <a href="#" class="remove"></a>
                           </td>
                           <td class="product-thumbnail">
-                            <a href="#">
+                            <a href="productdetails.html">
                               <img
                                 src="assets/images/cart-item-1.jpg"
                                 alt="img"
@@ -766,7 +666,9 @@
                             </a>
                           </td>
                           <td class="product-name" data-title="Product">
-                            <a href="#" class="title">Moma Planter</a>
+                            <a href="productdetails.html" class="title"
+                              >Moma Planter</a
+                            >
                             <span class="attributes-select attributes-color"
                               >Brown,</span
                             >
@@ -846,50 +748,24 @@
     <footer class="footer style7">
       <div class="container">
         <div class="container-wapper">
-          <div class="row">
-            <div
-              class="box-footer col-xs-12 col-sm-4 col-md-4 col-lg-4 hidden-sm hidden-md hidden-lg"
-            >
-              <div class="cleric-newsletter style1">
-                <div class="newsletter-head">
-                  <h3 class="title">Newsletter</h3>
-                </div>
-                <div class="newsletter-form-wrap">
-                  <div class="list">
-                    Sign up for our free video course and <br />
-                    urban garden inspiration
-                  </div>
-                  <input
-                    type="email"
-                    class="input-text email email-newsletter"
-                    placeholder="Your email letter"
-                  />
-                  <button class="button btn-submit submit-newsletter">
-                    SUBSCRIBE
-                  </button>
-                </div>
-              </div>
-            </div>
+          <div class="row myRow">
             <div class="box-footer col-xs-12 col-sm-4 col-md-4 col-lg-4">
               <div class="cleric-custommenu default">
-                <h2 class="widgettitle">Quick Menu</h2>
-                <ul class="menu">
-                  <li class="menu-item">
-                    <a href="#">New arrivals</a>
-                  </li>
-                  <li class="menu-item">
-                    <a href="#">Life style</a>
-                  </li>
-                  <li class="menu-item">
-                    <a href="#">Accents</a>
-                  </li>
-                  <li class="menu-item">
-                    <a href="#">Tables</a>
-                  </li>
-                  <li class="menu-item">
-                    <a href="#">Dining</a>
-                  </li>
-                </ul>
+                <div class="logo">
+                  <a href="index.html">
+                    <img
+                      src="./assets/images/dekor-dizayn-logo.PNG"
+                      alt="logo"
+                    />
+                  </a>
+                </div>
+                <div class="info">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Atque, unde, magnam officia facilis reiciendis distinctio
+                    assumenda architecto aperiam quia eaque amet sequi nam.
+                  </p>
+                </div>
               </div>
             </div>
             <div
@@ -897,50 +773,29 @@
             >
               <div class="cleric-newsletter style1">
                 <div class="newsletter-head">
-                  <h3 class="title">Newsletter</h3>
+                  <h3 class="title custommenu-title-blog">KEÇİDLƏR</h3>
                 </div>
-                <div class="newsletter-form-wrap">
-                  <div class="list">
-                    Sign up for our free video course and <br />
-                    urban garden inspiration
-                  </div>
-                  <input
-                    type="email"
-                    class="input-text email email-newsletter"
-                    placeholder="Your email letter"
-                  />
-                  <button class="button btn-submit submit-newsletter">
-                    SUBSCRIBE
-                  </button>
-                </div>
-              </div>
-            </div>
-            <div class="box-footer col-xs-12 col-sm-4 col-md-4 col-lg-4">
-              <div class="cleric-custommenu default">
-                <h2 class="widgettitle">Information</h2>
                 <ul class="menu">
                   <li class="menu-item">
-                    <a href="#">FAQs</a>
+                    <a href="products.html">Məhsullar</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#">Track Order</a>
+                    <a href="blog.html">Xəbərlər</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#">Delivery</a>
+                    <a href="about.html">Haqqımızda</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#">Contact Us</a>
-                  </li>
-                  <li class="menu-item">
-                    <a href="#">Return</a>
+                    <a href="contact.html">Əlaqə</a>
                   </li>
                 </ul>
               </div>
             </div>
-          </div>
-          <div class="footer-end">
-            <div class="row">
-              <div class="col-sm-12 col-xs-12">
+            <div class="box-footer col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <div class="cleric-custommenu default">
+                <h2 class="widgettitle custommenu-title-blog">
+                  SOSIAL ŞƏBƏKƏLƏR
+                </h2>
                 <div class="cleric-socials">
                   <ul class="socials">
                     <li>
@@ -976,39 +831,24 @@
                     </li>
                   </ul>
                 </div>
-                <div class="coppyright">
-                  Copyright © 2020
-                  <a href="#">Cleric</a>
-                  . All rights reserved
-                </div>
+              </div>
+            </div>
+          </div>
+          <div class="footer-end">
+            <div class="row">
+              <div class="col-sm-12 col-xs-12">
+                <p>
+                  © Copyright 2023
+                  <a href="https://khanbutagroup.az/">Khan Buta Group</a>. All
+                  Rights Reserved.
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </footer>
-    <div class="footer-device-mobile">
-      <div class="wapper">
-        <div class="footer-device-mobile-item device-home">
-          <a href="index-2.html">
-            <span class="icon">
-              <i class="fa fa-home" aria-hidden="true"></i>
-            </span>
-            Home
-          </a>
-        </div>
 
-        <div class="footer-device-mobile-item device-home device-cart">
-          <a href="#">
-            <span class="icon">
-              <i class="fa fa-shopping-basket" aria-hidden="true"></i>
-              <span class="count-icon"> 0 </span>
-            </span>
-            <span class="text">Cart</span>
-          </a>
-        </div>
-      </div>
-    </div>
     <a href="#" class="backtotop">
       <i class="fa fa-angle-double-up"></i>
     </a>
