--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
               class="col-lg-3 col-sm-4 col-md-3 col-xs-7 col-ts-12 header-element"
             >
               <div class="logo">
-                <a href="index-2.html">
+                <a href="index.html">
                   <img src="assets/images/dekor-dizayn-logo.PNG" alt="img" />
                 </a>
               </div>
@@ -88,7 +88,7 @@
               <div class="block-search-block">
                 <form class="form-search form-search-width-category">
                   <div class="form-content">
-                    <div class="category">
+                    <div class="category" id="category-select">
                       <select
                         title="cate"
                         data-placeholder="All Categories"
@@ -365,7 +365,7 @@
                 >
                   <li class="menu-item">
                     <a
-                      href="index-2.html"
+                      href="index.html"
                       class="cleric-menu-item-title"
                       title="Home"
                       >Ana səhifə</a
@@ -373,126 +373,21 @@
                   </li>
                   <li class="menu-item">
                     <a
-                      href="gridproducts_leftsidebar.html"
+                      href="products.html"
                       class="cleric-menu-item-title"
                       title="Shop"
                     >
                       Məhsullar</a
                     >
                   </li>
-                  <li class="menu-item menu-item-has-children item-megamenu">
-                    <a href="#" class="cleric-menu-item-title" title="Pages"
-                      >Pages</a
-                    >
-                    <span class="toggle-submenu"></span>
-                    <div class="submenu mega-menu menu-page">
-                      <div class="row">
-                        <div
-                          class="col-xs-12 col-sm-12 col-md-12 col-lg-3 menu-page-item"
-                        >
-                          <div class="cleric-custommenu default">
-                            <h2 class="widgettitle">Shop Pages</h2>
-                            <ul class="menu">
-                              <li class="menu-item">
-                                <a href="shoppingcart.html">Shopping Cart</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="checkout.html">Checkout</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="contact.html">Contact us</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="404page.html">404</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="login.html">Login/Register</a>
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div
-                          class="col-xs-12 col-sm-12 col-md-12 col-lg-3 menu-page-item"
-                        >
-                          <div class="cleric-custommenu default">
-                            <h2 class="widgettitle">Product</h2>
-                            <ul class="menu">
-                              <li class="menu-item">
-                                <a href="productdetails-fullwidth.html"
-                                  >Product Fullwidth</a
-                                >
-                              </li>
-                              <li class="menu-item">
-                                <a href="productdetails-leftsidebar.html"
-                                  >Product left sidebar</a
-                                >
-                              </li>
-                              <li class="menu-item">
-                                <a href="productdetails-rightsidebar.html"
-                                  >Product right sidebar</a
-                                >
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div
-                          class="col-xs-12 col-sm-12 col-md-12 col-lg-3 menu-page-item"
-                        ></div>
-                        <div
-                          class="col-xs-12 col-sm-12 col-md-12 col-lg-3 menu-page-item"
-                        ></div>
-                      </div>
-                    </div>
-                  </li>
-                  <li class="menu-item menu-item-has-children">
+
+                  <li class="menu-item">
                     <a
-                      href="inblog_right-siderbar.html"
+                      href="blog.html"
                       class="cleric-menu-item-title"
                       title="Blogs"
-                      >Bloqlar</a
+                      >Xəbərlər</a
                     >
-                    <span class="toggle-submenu"></span>
-                    <ul class="submenu">
-                      <li class="menu-item menu-item-has-children">
-                        <a
-                          href="#"
-                          class="cleric-menu-item-title"
-                          title="Blog Style"
-                          >Blog Style</a
-                        >
-                        <span class="toggle-submenu"></span>
-                        <ul class="submenu">
-                          <li class="menu-item">
-                            <a href="bloggrid.html">Grid</a>
-                          </li>
-                          <li class="menu-item">
-                            <a href="bloglist.html">List</a>
-                          </li>
-                          <li class="menu-item">
-                            <a href="bloglist-leftsidebar.html">List Sidebar</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="menu-item menu-item-has-children">
-                        <a
-                          href="#"
-                          class="cleric-menu-item-title"
-                          title="Post Layout"
-                          >Post Layout</a
-                        >
-                        <span class="toggle-submenu"></span>
-                        <ul class="submenu">
-                          <li class="menu-item">
-                            <a href="inblog_left-siderbar.html">Left Sidebar</a>
-                          </li>
-                          <li class="menu-item">
-                            <a href="inblog_right-siderbar.html"
-                              >Right Sidebar</a
-                            >
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
                   </li>
                   <li class="menu-item">
                     <a
@@ -606,7 +501,7 @@
             <div class="breadcrumb-trail breadcrumbs">
               <ul class="trail-items breadcrumb">
                 <li class="trail-item trail-begin">
-                  <a href="index-2.html">Ana səhifə</a>
+                  <a href="index.html">Ana səhifə</a>
                 </li>
                 <li class="trail-item trail-end active">Əlaqə</li>
               </ul>
@@ -795,7 +690,7 @@
             <div class="box-footer col-xs-12 col-sm-4 col-md-4 col-lg-4">
               <div class="cleric-custommenu default">
                 <div class="logo">
-                  <a href="index-2.html">
+                  <a href="index.html">
                     <img
                       src="./assets/images/dekor-dizayn-logo.PNG"
                       alt="logo"
@@ -820,19 +715,16 @@
                 </div>
                 <ul class="menu">
                   <li class="menu-item">
-                    <a href="#">FAQs</a>
+                    <a href="products.html">Məhsullar</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#">Track Order</a>
+                    <a href="blog.html">Xəbərlər</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#">Delivery</a>
+                    <a href="about.html">Haqqımızda</a>
                   </li>
                   <li class="menu-item">
-                    <a href="contact.html">Contact Us</a>
-                  </li>
-                  <li class="menu-item">
-                    <a href="#">Return</a>
+                    <a href="contact.html">Əlaqə</a>
                   </li>
                 </ul>
               </div>
@@ -894,6 +786,7 @@
         </div>
       </div>
     </footer>
+
     <a href="#" class="backtotop">
       <i class="fa fa-angle-double-up"></i>
     </a>
